tests/harness/errors/134_bool_where_value.eu
# Mistake: using boolean in comparison — booleans are not native values
result: true > 5
